--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
