--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.35",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
